{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 149,
  "lineage": "0ad04f6d-fe27-3b6a-1fea-c7a107f14ef3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "secondary_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01eaf1420edb089b1",
            "association_id": "eipassoc-08e572681dce1d484",
            "domain": "vpc",
            "id": "eipalloc-01eaf1420edb089b1",
            "instance": "i-05baead3f771d6b2a",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-067a5bf97138ca82e",
            "private_dns": "ip-10-0-7-160.eu-west-1.compute.internal",
            "private_ip": "10.0.7.160",
            "public_dns": "ec2-52-18-250-149.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.18.250.149",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.primary",
            "aws_security_group.allow_ssh",
            "aws_subnet.public",
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "poc_screena",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f049b4917244669",
            "arn": "arn:aws:ec2:eu-west-1:652749460913:instance/i-05baead3f771d6b2a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05baead3f771d6b2a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "deployer-key-perso-fred",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-067a5bf97138ca82e"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067a5bf97138ca82e",
            "private_dns": "ip-10-0-7-160.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.7.160",
            "public_dns": "ec2-52-18-250-149.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.18.250.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0031b5e7d42e31c0c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dbecab06ac3028d2",
            "tags": {
              "Name": "poc_screena_aws_instance_test_client_db"
            },
            "tags_all": {
              "Name": "poc_screena_aws_instance_test_client_db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0af8a93ec04b0c240"
            ]
          },
          "dependencies": [
            "aws_key_pair.poc_screena",
            "aws_network_interface.primary",
            "aws_security_group.allow_ssh",
            "aws_subnet.public",
            "aws_vpc.poc_screena",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "poc_screena",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652749460913:internet-gateway/igw-0993e579c3a05b256",
            "id": "igw-0993e579c3a05b256",
            "owner_id": "652749460913",
            "tags": {
              "Name": "poc_screena_internet_gateway"
            },
            "tags_all": {
              "Name": "poc_screena_internet_gateway"
            },
            "vpc_id": "vpc-09ee31d5e45dfd9ff"
          },
          "dependencies": [
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652749460913:network-interface/eni-067a5bf97138ca82e",
            "attachment": [
              {
                "attachment_id": "eni-attach-0d713d857aff11841",
                "device_index": 0,
                "instance": "i-05baead3f771d6b2a"
              }
            ],
            "id": "eni-067a5bf97138ca82e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:5d:dc:d4:59:bd",
            "owner_id": "652749460913",
            "private_dns_name": "ip-10-0-7-160.eu-west-1.compute.internal",
            "private_ip": "10.0.7.160",
            "private_ip_list": [
              "10.0.7.160"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.7.160"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0af8a93ec04b0c240"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dbecab06ac3028d2",
            "tags": {
              "Name": "primary_interface"
            },
            "tags_all": {
              "Name": "primary_interface"
            }
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public",
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652749460913:route-table/rtb-095680e6c7b5c69a6",
            "id": "rtb-095680e6c7b5c69a6",
            "owner_id": "652749460913",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "poc_screena_route_table_private_a"
            },
            "tags_all": {
              "Name": "poc_screena_route_table_private_a"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ee31d5e45dfd9ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652749460913:route-table/rtb-0f46fb98c10613d89",
            "id": "rtb-0f46fb98c10613d89",
            "owner_id": "652749460913",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "poc_screena_route_table_private_b"
            },
            "tags_all": {
              "Name": "poc_screena_route_table_private_b"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ee31d5e45dfd9ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652749460913:route-table/rtb-0604fefab476bccf3",
            "id": "rtb-0604fefab476bccf3",
            "owner_id": "652749460913",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "poc_screena_route_table_private_"
            },
            "tags_all": {
              "Name": "poc_screena_route_table_private_"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ee31d5e45dfd9ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652749460913:route-table/rtb-050c3de820faabd81",
            "id": "rtb-050c3de820faabd81",
            "owner_id": "652749460913",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0993e579c3a05b256",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "poc_screena_route_table_public"
            },
            "tags_all": {
              "Name": "poc_screena_route_table_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ee31d5e45dfd9ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.poc_screena",
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bbabb7aab0a16c9",
            "route_table_id": "rtb-095680e6c7b5c69a6",
            "subnet_id": "subnet-0c100334614cb8fe6"
          },
          "dependencies": [
            "aws_route_table.private_a",
            "aws_subnet.a",
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04de9cce2da0ac845",
            "route_table_id": "rtb-0f46fb98c10613d89",
            "subnet_id": "subnet-0451b1ec1d10d0bcf"
          },
          "dependencies": [
            "aws_route_table.private_b",
            "aws_subnet.b",
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2f8076585e2e21c",
            "route_table_id": "rtb-0604fefab476bccf3",
            "subnet_id": "subnet-02efc4af23cb76e99"
          },
          "dependencies": [
            "aws_route_table.private_c",
            "aws_subnet.c",
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e0a34cd221eb2db",
            "route_table_id": "rtb-050c3de820faabd81",
            "subnet_id": "subnet-0dbecab06ac3028d2"
          },
          "dependencies": [
            "aws_internet_gateway.poc_screena",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_pgsql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652749460913:security-group/sg-042663a8128cf80d4",
            "description": "Allow PGSQL proto inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042663a8128cf80d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.7.0/24",
                  "10.0.4.0/24",
                  "10.0.5.0/24",
                  "10.0.6.0/24"
                ],
                "description": "PGSQL proto from anywhere",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "allow_pgsql",
            "name_prefix": "",
            "owner_id": "652749460913",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ee31d5e45dfd9ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652749460913:security-group/sg-0af8a93ec04b0c240",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af8a93ec04b0c240",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "652749460913",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ee31d5e45dfd9ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652749460913:subnet/subnet-0c100334614cb8fe6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c100334614cb8fe6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652749460913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc_screena_subnet_a"
            },
            "tags_all": {
              "Name": "poc_screena_subnet_a"
            },
            "vpc_id": "vpc-09ee31d5e45dfd9ff"
          },
          "dependencies": [
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652749460913:subnet/subnet-0451b1ec1d10d0bcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0451b1ec1d10d0bcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652749460913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc_screena_subnet_b"
            },
            "tags_all": {
              "Name": "poc_screena_subnet_b"
            },
            "vpc_id": "vpc-09ee31d5e45dfd9ff"
          },
          "dependencies": [
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652749460913:subnet/subnet-02efc4af23cb76e99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02efc4af23cb76e99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652749460913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc_screena_subnet_c"
            },
            "tags_all": {
              "Name": "poc_screena_subnet_c"
            },
            "vpc_id": "vpc-09ee31d5e45dfd9ff"
          },
          "dependencies": [
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652749460913:subnet/subnet-0dbecab06ac3028d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbecab06ac3028d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "652749460913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc_screena_subnet_public"
            },
            "tags_all": {
              "Name": "poc_screena_subnet_public"
            },
            "vpc_id": "vpc-09ee31d5e45dfd9ff"
          },
          "dependencies": [
            "aws_vpc.poc_screena"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "poc_screena",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:652749460913:vpc/vpc-09ee31d5e45dfd9ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0092d8566ff83550b",
            "default_route_table_id": "rtb-0d20ac4823436d971",
            "default_security_group_id": "sg-0a0bebc60527565e0",
            "dhcp_options_id": "dopt-4b2f3a2d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09ee31d5e45dfd9ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d20ac4823436d971",
            "owner_id": "652749460913",
            "tags": {
              "Name": "poc_screena"
            },
            "tags_all": {
              "Name": "poc_screena"
            }
          }
        }
      ]
    }
  ]
}